--- a/emall/springboot/pom.xml
+++ b/emall/springboot/pom.xml
@@ -10,6 +10,7 @@
   <packaging>pom</packaging>
 
   <modules>
+  	<module>auth-service</module>
     <module>account-service</module>
     <module>cart-service</module>
     <module>catalog-service</module>
@@ -24,6 +25,8 @@
     <module>review-service</module>
     <module>search-service</module>
     <module>shipment-service</module>
+    <module>gateway</module>
+    <module>config</module>
   </modules>
 
 </project>
