--- a/examples/week 2/account-service/pom.xml
+++ b/examples/week 2/account-service/pom.xml
@@ -24,9 +24,16 @@
 		<java.version>1.8</java.version>
 		<springfox.version>2.4.0</springfox.version>
 		<jackson.version>2.8.6</jackson.version>
+		<joda-time.version>2.9.6</joda-time.version>
 	</properties>
 
 	<dependencies>
+		<dependency>
+			<groupId>joda-time</groupId>
+			<artifactId>joda-time</artifactId>
+			<version>${joda-time.version}</version>
+		</dependency>
+
 		<dependency>
 			<groupId>com.fasterxml.jackson.core</groupId>
 			<artifactId>jackson-databind</artifactId>
