--- a/examples/week 3/account-service-consul/src/main/resources/application.yml
+++ b/examples/week 3/account-service-consul/src/main/resources/application.yml
@@ -17,15 +17,19 @@ spring:
     name: account-service-consul
     instance_id: 001
   cloud:
+    inetutils:
+      preferred-networks:
+        - 192.168
+        - 10.0
     consul:
       host: localhost
       port: 8500
       discovery:
-        enable: true
-        instanceId: ${spring.application.name}:${spring.application.instance_id}:${random.value}
-        healthCheckPath: ${management.context-path}/health
-        healthCheckInterval: 15s
-        tags: dev, emall
+        enable: true 
+        instanceId: ${spring.application.name}:${spring.application.instance_id}:${random.value} # 实例ID
+        healthCheckPath: ${management.context-path}/health # 健康检测路径
+        healthCheckInterval: 15s # 健康检测时间间隔
+        tags: dev # 服务的标签
   datasource:
     url: jdbc:mysql://localhost:3306/emall
     username: emall
