new: 添加依赖服务API

--- a/examples/week 3/account-service-consul/src/main/resources/application.yml
+++ b/examples/week 3/account-service-consul/src/main/resources/application.yml
@@ -14,7 +14,7 @@ management:
 
 spring:
   application:
-    name: account-service-consul
+    name: account-service
     instance_id: 001
   cloud:
     inetutils:
