--- a/examples/week8/config-server/src/main/resources/application-sandboxing.yml
+++ b/examples/week8/config-server/src/main/resources/application-sandboxing.yml
@@ -22,12 +22,12 @@ spring:
     config:
       server:
         git:
-          uri: file:/Users/junqiangliu/Development/git_repos/spring-cloud-config-sample-repo
+          uri: https://github.com/cnjunq/spring-cloud-config-sample-repo
           searchPaths: '{application}'
           
 encrypt:
   key-store:
     alias: emall-config-server-key
-    location: classpath:/config-server.jks
+    location: file:/emall/config/config-server.jks
     password: 3m@ll-st0r3-s3cr3t
     secret: 3m@ll-k3y-s3cr3t
