new: 添加emall-parent, hystrix-dashboard项目

--- a/examples/week8/config-server/pom.xml
+++ b/examples/week8/config-server/pom.xml
@@ -75,6 +75,7 @@
 							<include>**/*.yml</include>
 							<include>**/*.yaml</include>
 							<include>**/*.properties</include>
+							<include>**/*.jks</include>
 						</includes>
 					</resource>
 					<resource>
