--- a/examples/week8/account-service/pom.xml
+++ b/examples/week8/account-service/pom.xml
@@ -8,189 +8,14 @@
 	<version>1.0</version>
 	<packaging>jar</packaging>
 
-	<name>account-service</name>
-	<description>account microservice for eMall</description>
-
 	<parent>
-		<groupId>org.springframework.boot</groupId>
-		<artifactId>spring-boot-starter-parent</artifactId>
-		<version>1.5.1.RELEASE</version>
-		<relativePath /> <!-- lookup parent from repository -->
+		<groupId>io.junq.examples.emall.boot</groupId>
+		<artifactId>emall-parent</artifactId>
+		<version>1.0</version>
+		<relativePath>../</relativePath>
 	</parent>
 
-	<properties>
-		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
-		<java.version>1.8</java.version>
-		<springfox.version>2.4.0</springfox.version>
-		<jackson.version>2.8.6</jackson.version>
-		<joda-time.version>2.9.6</joda-time.version>
-	</properties>
-
-	<dependencies>
-		<dependency>
-			<groupId>joda-time</groupId>
-			<artifactId>joda-time</artifactId>
-			<version>${joda-time.version}</version>
-		</dependency>
-
-		<dependency>
-			<groupId>com.fasterxml.jackson.core</groupId>
-			<artifactId>jackson-databind</artifactId>
-			<version>${jackson.version}</version>
-		</dependency>
-
-		<dependency>
-			<groupId>org.springframework.boot</groupId>
-			<artifactId>spring-boot-starter-web</artifactId>
-		</dependency>
-
-		<dependency>
-			<groupId>mysql</groupId>
-			<artifactId>mysql-connector-java</artifactId>
-		</dependency>
-
-		<dependency>
-			<groupId>org.mybatis</groupId>
-			<artifactId>mybatis</artifactId>
-			<version>3.4.1</version>
-		</dependency>
-
-		<dependency>
-			<groupId>org.mybatis</groupId>
-			<artifactId>mybatis-spring</artifactId>
-			<version>1.3.0</version>
-		</dependency>
-
-		<dependency>
-			<groupId>org.springframework.boot</groupId>
-			<artifactId>spring-boot-starter-jdbc</artifactId>
-		</dependency>
-
-		<dependency>
-			<groupId>org.springframework.cloud</groupId>
-			<artifactId>
-				spring-cloud-starter-consul-discovery
-			</artifactId>
-		</dependency>
-
-		<dependency>
-			<groupId>org.springframework</groupId>
-			<artifactId>spring-jdbc</artifactId>
-		</dependency>
-
-		<dependency>
-			<groupId>org.projectlombok</groupId>
-			<artifactId>lombok</artifactId>
-			<optional>true</optional>
-		</dependency>
-
-		<dependency>
-			<groupId>io.springfox</groupId>
-			<artifactId>springfox-swagger2</artifactId>
-			<version>${springfox.version}</version>
-		</dependency>
-
-		<dependency>
-			<groupId>io.springfox</groupId>
-			<artifactId>springfox-swagger-ui</artifactId>
-			<version>${springfox.version}</version>
-		</dependency>
-
-		<dependency>
-			<groupId>org.springframework.boot</groupId>
-			<artifactId>spring-boot-starter-test</artifactId>
-			<scope>test</scope>
-		</dependency>
-
-		<dependency>
-			<groupId>org.springframework.cloud</groupId>
-			<artifactId>spring-cloud-starter-config</artifactId>
-		</dependency>
-	</dependencies>
-
-	<dependencyManagement>
-		<dependencies>
-			<dependency>
-				<groupId>org.springframework.cloud</groupId>
-				<artifactId>spring-cloud-dependencies</artifactId>
-				<version>Camden.SR6</version>
-				<type>pom</type>
-				<scope>import</scope>
-			</dependency>
-		</dependencies>
-	</dependencyManagement>
-
-
-	<profiles>
-		<profile>
-			<id>development</id>
-			<properties>
-				<build.profile.id>development</build.profile.id>
-			</properties>
-			<activation>
-				<activeByDefault>true</activeByDefault>
-			</activation>
-			<build>
-				<resources>
-					<resource>
-						<directory>${basedir}/src/main/resources</directory>
-						<filtering>true</filtering>
-						<includes>
-							<include>**/*.yml</include>
-							<include>**/*.yaml</include>
-							<include>**/*.properties</include>
-						</includes>
-					</resource>
-					<resource>
-						<directory>${basedir}/data</directory>
-						<filtering>true</filtering>
-						<includes>
-							<include>**/*.sql</include>
-						</includes>
-					</resource>
-				</resources>
-			</build>
-		</profile>
-		<profile>
-			<id>sandboxing</id>
-			<properties>
-				<build.profile.id>sandboxing</build.profile.id>
-			</properties>
-			<build>
-				<resources>
-					<resource>
-						<directory>${basedir}/src/main/resources</directory>
-						<excludes>
-							<exclude>**/*.yml</exclude>
-							<exclude>**/*.yaml</exclude>
-							<exclude>**/*.properties</exclude>
-						</excludes>
-					</resource>
-					<resource>
-						<directory>${basedir}/data</directory>
-						<excludes>
-							<exclude>**/*.sql</exclude>
-						</excludes>
-					</resource>
-				</resources>
-			</build>
-		</profile>
-	</profiles>
-
-	<build>
-		<plugins>
-			<plugin>
-				<groupId>org.springframework.boot</groupId>
-				<artifactId>spring-boot-maven-plugin</artifactId>
-				<configuration>
-					<profiles>
-						<profile>development</profile>
-						<profile>sandboxing</profile>
-					</profiles>
-				</configuration>
-			</plugin>
-		</plugins>
-	</build>
+	<name>account-service</name>
+	<description>account microservice for eMall</description>
 
 </project>
