--- a/examples/week8/pom.xml
+++ b/examples/week8/pom.xml
@@ -14,6 +14,7 @@
 	<modules>
 		<module>cart-service</module>
 		<module>account-service</module>
+		<module>product-service</module>
 	</modules>
 
 	<parent>
