change: 修改order-service改为使用parent pom

--- a/examples/week8/pom.xml
+++ b/examples/week8/pom.xml
@@ -15,6 +15,7 @@
 		<module>cart-service</module>
 		<module>account-service</module>
 		<module>product-service</module>
+		<module>order-service</module>
 	</modules>
 
 	<parent>
