change: 修改config-server maven parent dependencies

--- a/examples/week8/config-server/pom.xml
+++ b/examples/week8/config-server/pom.xml
@@ -8,121 +8,47 @@
 	<version>1.0.0</version>
 	<packaging>jar</packaging>
 
+	<parent>
+		<groupId>io.junq.examples.emall.boot</groupId>
+		<artifactId>emall-parent</artifactId>
+		<version>1.0</version>
+		<relativePath>../</relativePath>
+	</parent>
+
 	<name>config-server</name>
 	<description>eMall Spring Cloud Config Server</description>
 
-	<parent>
-		<groupId>org.springframework.boot</groupId>
-		<artifactId>spring-boot-starter-parent</artifactId>
-		<version>1.5.1.RELEASE</version>
-		<relativePath /> <!-- lookup parent from repository -->
-	</parent>
-
-	<properties>
-		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
-		<java.version>1.8</java.version>
-	</properties>
-
 	<dependencies>
-		<dependency>
-			<groupId>org.springframework.boot</groupId>
-			<artifactId>spring-boot-starter-actuator</artifactId>
-		</dependency>
 		<dependency>
 			<groupId>org.springframework.cloud</groupId>
 			<artifactId>spring-cloud-config-server</artifactId>
-		</dependency>
-
-		<dependency>
-			<groupId>org.springframework.boot</groupId>
-			<artifactId>spring-boot-starter-test</artifactId>
-			<scope>test</scope>
 		</dependency>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-security</artifactId>
 		</dependency>
+		<dependency>
+			<groupId>org.projectlombok</groupId>
+			<artifactId>lombok</artifactId>
+			<scope>compileOnly</scope>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework.cloud</groupId>
+			<artifactId>
+						spring-cloud-starter-consul-discovery
+					</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework.cloud</groupId>
+			<artifactId>
+						spring-cloud-starter-hystrix
+					</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-test</artifactId>
+			<scope>test</scope>
+		</dependency>
 	</dependencies>
-
-	<dependencyManagement>
-		<dependencies>
-			<dependency>
-				<groupId>org.springframework.cloud</groupId>
-				<artifactId>spring-cloud-dependencies</artifactId>
-				<version>Camden.SR6</version>
-				<type>pom</type>
-				<scope>import</scope>
-			</dependency>
-		</dependencies>
-	</dependencyManagement>
-
-	<profiles>
-		<profile>
-			<id>development</id>
-			<properties>
-				<build.profile.id>development</build.profile.id>
-			</properties>
-			<activation>
-				<activeByDefault>true</activeByDefault>
-			</activation>
-			<build>
-				<resources>
-					<resource>
-						<directory>${basedir}/src/main/resources</directory>
-						<filtering>true</filtering>
-						<includes>
-							<include>**/*.yml</include>
-							<include>**/*.yaml</include>
-							<include>**/*.properties</include>
-							<include>**/*.jks</include>
-						</includes>
-					</resource>
-					<resource>
-						<directory>${basedir}/data</directory>
-						<filtering>true</filtering>
-						<includes>
-							<include>**/*.sql</include>
-						</includes>
-					</resource>
-				</resources>
-			</build>
-		</profile>
-		<profile>
-			<id>sandboxing</id>
-			<properties>
-				<build.profile.id>sandboxing</build.profile.id>
-			</properties>
-			<build>
-				<resources>
-					<resource>
-						<directory>${basedir}/src/main/resources</directory>
-						<excludes>
-							<exclude>**/*.yml</exclude>
-							<exclude>**/*.yaml</exclude>
-							<exclude>**/*.properties</exclude>
-							<exclude>**/*.jks</exclude>
-						</excludes>
-					</resource>
-				</resources>
-			</build>
-		</profile>
-	</profiles>
-
-	<build>
-		<plugins>
-			<plugin>
-				<groupId>org.springframework.boot</groupId>
-				<artifactId>spring-boot-maven-plugin</artifactId>
-				<configuration>
-					<profiles>
-						<profile>development</profile>
-						<profile>sandboxing</profile>
-					</profiles>
-				</configuration>
-			</plugin>
-		</plugins>
-	</build>
-
 
 </project>
