--- a/examples/week8/pom.xml
+++ b/examples/week8/pom.xml
@@ -17,6 +17,7 @@
 		<module>product-service</module>
 		<module>order-service</module>
 		<module>config-server</module>
+		<module>auth-service</module>
 	</modules>
 
 	<parent>
