change: 修改 config-server Dockerfile

--- a/examples/week8/config-server/src/main/resources/application-development.yml
+++ b/examples/week8/config-server/src/main/resources/application-development.yml
@@ -24,6 +24,8 @@ spring:
         git:
           uri: file:/Users/junqiangliu/Development/git_repos/spring-cloud-config-sample-repo
           searchPaths: '{application}'
+          cloneOnStart: true
+          timeout: 5
           
 encrypt:
   key-store:
