--- a/examples/week8/config-server/src/main/resources/application-sandboxing.yml
+++ b/examples/week8/config-server/src/main/resources/application-sandboxing.yml
@@ -22,8 +22,10 @@ spring:
     config:
       server:
         git:
-          uri: https://github.com/cnjunq/spring-cloud-config-sample-repo
+          uri: https://git.oschina.net/cnjunq/spring-cloud-config-sample-repo.git
           searchPaths: '{application}'
+          cloneOnStart: true
+          timeout: 15
           
 encrypt:
   key-store:
