change: 修改config client重试次数及时长

--- a/examples/week8/cart-service/src/main/resources/bootstrap.yml
+++ b/examples/week8/cart-service/src/main/resources/bootstrap.yml
@@ -10,4 +10,9 @@ spring:
       profile: ${spring.profiles.active:development}
       label: master
       enabled: true
+      fail-fast: true
+      retry:
+        initial-interval: 5000
+        max-attempts: 20
+        max-interval: 100000
       
