--- a/examples/week8/order-service/src/main/resources/bootstrap.yml
+++ b/examples/week8/order-service/src/main/resources/bootstrap.yml
@@ -4,9 +4,15 @@ spring:
   cloud:
     config:
       name: ${spring.application.name}
-      uri: http://localhost:9888
+      uri: ${CONFIG_SERVER_URI:http://localhost:9888}
       username: root
       password: c0nfIgS3cr3t
       profile: ${spring.profiles.active:development}
       label: master
       enabled: true
+      fail-fast: true
+      retry:
+        initial-interval: 5000
+        max-attempts: 20
+        max-interval: 100000
+      
