new: 添加emall-api项目，将为服务的API Model统一至一个项目

--- a/examples/week8/account-service/pom.xml
+++ b/examples/week8/account-service/pom.xml
@@ -20,6 +20,14 @@
 	
 	<dependencies>
 		<dependency>
+			<groupId>io.junq.examples.emall.boot</groupId>
+			<artifactId>emall-api</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>joda-time</groupId>
+			<artifactId>joda-time</artifactId>
+		</dependency>
+		<dependency>
 			<groupId>joda-time</groupId>
 			<artifactId>joda-time</artifactId>
 		</dependency>
