--- a/examples/week8/order-service/pom.xml
+++ b/examples/week8/order-service/pom.xml
@@ -18,7 +18,11 @@
 	<name>order-service</name>
 	<description>eMall order microservice</description>
 
-		<dependencies>
+	<dependencies>
+		<dependency>
+			<groupId>io.junq.examples.emall.boot</groupId>
+			<artifactId>emall-api</artifactId>
+		</dependency>
 		<dependency>
 			<groupId>joda-time</groupId>
 			<artifactId>joda-time</artifactId>
@@ -51,7 +55,7 @@
 			<groupId>org.mybatis</groupId>
 			<artifactId>mybatis-spring</artifactId>
 		</dependency>
-		
+
 		<dependency>
 			<groupId>org.springframework</groupId>
 			<artifactId>spring-jdbc</artifactId>
@@ -106,7 +110,7 @@
 		</dependency>
 		<dependency>
 			<groupId>org.springframework.cloud</groupId>
-			<artifactId>spring-cloud-starter-oauth2</artifactId>
+			<artifactId>spring-cloud-starter-feign</artifactId>
 		</dependency>
 	</dependencies>
 
