--- a/examples/week8/pom.xml
+++ b/examples/week8/pom.xml
@@ -12,6 +12,7 @@
 	<description>parent pom for eMall</description>
 
 	<modules>
+		<module>emall-api</module>
 		<module>cart-service</module>
 		<module>account-service</module>
 		<module>product-service</module>
@@ -40,6 +41,7 @@
 		<mybatis-spring.version>1.3.0</mybatis-spring.version>
 		<wiremock.version>2.5.1</wiremock.version>
 		<restassured.version>3.0.2</restassured.version>
+		<emall-api.version>1.0.0</emall-api.version>
 	</properties>
 
 	<dependencies>
@@ -52,6 +54,11 @@
 
 	<dependencyManagement>
 		<dependencies>
+			<dependency>
+				<groupId>io.junq.examples.emall.boot</groupId>
+				<artifactId>emall-api</artifactId>
+				<version>${emall-api.version}</version>
+			</dependency>
 			<dependency>
 				<groupId>io.springfox</groupId>
 				<artifactId>springfox-swagger2</artifactId>
