--- a/examples/week8/emall-api/pom.xml
+++ b/examples/week8/emall-api/pom.xml
@@ -41,4 +41,28 @@
 		</dependency>
 	</dependencies>
 
+	<build>
+		<finalName>${project.artifactId}-${project.version}</finalName>
+		<plugins>
+			<!-- Set a JDK compiler level -->
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-compiler-plugin</artifactId>
+				<version>2.3.2</version>
+				<configuration>
+					<source>${java.version}</source>
+					<target>${java.version}</target>
+				</configuration>
+			</plugin>
+
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-jar-plugin</artifactId>
+				<configuration>
+					
+				</configuration>
+			</plugin>
+		</plugins>
+	</build>
+
 </project>
