new: 添加构建docker镜像的脚本

--- a/examples/week8/pom.xml
+++ b/examples/week8/pom.xml
@@ -180,18 +180,19 @@
 	</profiles>
 
 	<build>
-		<plugins>
-			<plugin>
-				<groupId>org.springframework.boot</groupId>
-				<artifactId>spring-boot-maven-plugin</artifactId>
-				<configuration>
-					<profiles>
-						<profile>development</profile>
-						<profile>sandboxing</profile>
-					</profiles>
-				</configuration>
-			</plugin>
-		</plugins>
+		<pluginManagement>
+			<plugins>
+				<plugin>
+					<groupId>org.springframework.boot</groupId>
+					<artifactId>spring-boot-maven-plugin</artifactId>
+					<configuration>
+						<profiles>
+							<profile>development</profile>
+							<profile>sandboxing</profile>
+						</profiles>
+					</configuration>
+				</plugin>
+			</plugins>
+		</pluginManagement>
 	</build>
-
 </project>
